change title color

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <input type="text" id="task-input" placeholder="Enter a new task">
         <button id="add-task">Add Task</button>
         <ul id="task-list"></ul>
+        <section id="removed-tasks">
+            <h3>Removed Tasks</h3>
+            <ul id="removed-task-list"></ul>
+        </section>        
     </section>
     <script src="./index.js"></script> 
 </body>
