--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <input type="text" id="task-input" placeholder="Enter a new task">
         <button id="add-task">Add Task</button>
         <ul id="task-list"></ul>
+        <section id="inprogress-tasks">
+            <h4>Inprogress Tasks</h3>
+            <ul id="removed-task-list"></ul>
+        </section> 
         <section id="removed-tasks">
             <h3>Removed Tasks</h3>
             <ul id="removed-task-list"></ul>
