--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
         <input type="text" id="task-input" placeholder="Enter a new task">
         <button id="add-task">Add Task</button>
         <ul id="task-list"></ul>
+
+        <!-- In Progress Section -->
         <section id="inprogress-tasks">
-            <h4>Inprogress Tasks</h3>
-            <ul id="removed-task-list"></ul>
+            <h3>In Progress Tasks</h3>
+            <ul id="inprogress-task-list"></ul>
         </section> 
+
+        <!-- Removed Tasks Section -->
         <section id="removed-tasks">
             <h3>Removed Tasks</h3>
             <ul id="removed-task-list"></ul>
