--- a/index.html
+++ b/index.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <header>
-        <h1>To-Do List</h1>
-    </header>
-    <h2>Manage Your Tasks</h2>
-        <input type="text" id="task-input" placeholder="Enter a new task">
-        <button id="add-task">Add Task</button>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section id="todo-app">
-        <ul id="task-list"></ul>
+    <header>
+        <h1>To-Do List</h1>
+    </header>
 
-        <!-- In Progress Section -->
-        <section id="inprogress-tasks">
-            <h3>In Progress Tasks</h3>
+    <!-- Flexbox Container -->
+    <div class="box">
+        <!-- Left: Add Task Section -->
+        <div class="task-input-section">
+            <h2>Add a Task</h2>
+            <input type="text" id="task-input" placeholder="Enter a new task">
+            <button id="add-task">Add Task</button>
+            <ul id="task-list"></ul>
+        </div>
+
+        <!-- Middle: In Progress Section -->
+        <div class="inprogress-section">
+            <h2>In Progress</h2>
             <ul id="inprogress-task-list"></ul>
-        </section> 
+        </div>
 
-        <!-- Removed Tasks Section -->
-        <section id="removed-tasks">
-            <h3>Removed Tasks</h3>
+        <!-- Right: Completed/Removed Section -->
+        <div class="removed-section">
+            <h2>Completed/Removed</h2>
             <ul id="removed-task-list"></ul>
-        </section>        
-    </section>
-    <script src="./index.js"></script> 
+            <button id="clear-removed">Clear Completed</button>
+        </div>
+    </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
