--- a/index.html
+++ b/index.html
@@ -36,5 +36,10 @@
     </div>
 
     <script src="index.js"></script>
-</body>
+    <footer>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Take action, no matter how small, and keep moving forward. Each completed task is a step closer to success! </title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 </html>
