--- a/index.html
+++ b/index.html
@@ -41,5 +41,5 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Take action, no matter how small, and keep moving forward. Each completed task is a step closer to success! </title>
         <link rel="stylesheet" href="style.css">
-    </head>
+    </footer>
 </html>
