--- a/index.html
+++ b/index.html
@@ -33,13 +33,11 @@
             <ul id="removed-task-list"></ul>
             <button id="clear-removed">Clear Completed</button>
         </div>
+        <footer>
+            <p>Take action, no matter how small, and keep moving forward. Each completed task is a step closer to success! 🚀</p>
+        </footer>
+        
     </div>
 
     <script src="index.js"></script>
-    <footer>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Take action, no matter how small, and keep moving forward. Each completed task is a step closer to success! </title>
-        <link rel="stylesheet" href="style.css">
-    </footer>
 </html>
